[gd_scene load_steps=6 format=3 uid="uid://m40fg1wky6ms"]

[ext_resource type="Script" path="res://Game/PlanetSelection.gd" id="1_kjayi"]
[ext_resource type="Texture2D" uid="uid://bj4ayws0m7xyw" path="res://UI/Start/start-background.png" id="2_lp3lq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_saoxl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u5dn7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_anq73"]

[node name="PlanetSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kjayi")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lp3lq")

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -4.0
offset_right = 112.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PlanetButton1" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_saoxl")
flat = true
icon_alignment = 1

[node name="PlanetButton2" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_u5dn7")
flat = true
icon_alignment = 1

[node name="PlanetButton3" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_anq73")
flat = true
icon_alignment = 1

[connection signal="pressed" from="ButtonContainer/PlanetButton1" to="." method="_on_planet_button_1_pressed"]
[connection signal="pressed" from="ButtonContainer/PlanetButton2" to="." method="_on_planet_button_2_pressed"]
[connection signal="pressed" from="ButtonContainer/PlanetButton3" to="." method="_on_planet_button_3_pressed"]
